--- a/README.adoc
+++ b/README.adoc
@@ -27,3 +27,5 @@ After initializing this repository, you need to install the Git hooks via:
 $ git config set core.hooksPath .githooks
 ----
 ====
+
+== SQL
